# gallery-dl-bytes

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/gallery_dl_bytes/: __init__.py  downloader.py  extra_types.py  file.py  job.py  message.py  util.py
typings/: ruff.toml
typings/gallery_dl/: __init__.pyi  actions.pyi  aes.pyi  archive.pyi  cache.pyi  config.pyi  cookies.pyi  exception.pyi  formatter.pyi  job.pyi  option.pyi  output.pyi  path.pyi  text.pyi  update.pyi  util.pyi  version.pyi
typings/gallery_dl/downloader/: __init__.pyi  common.pyi
typings/gallery_dl/extractor/: __init__.pyi  common.pyi  message.pyi
typings/gallery_dl/postprocessor/: __init__.pyi
